style: removed dark variable

--- a/frontend/src/app/modules/home/components/technology-card/technology-card.component.html
+++ b/frontend/src/app/modules/home/components/technology-card/technology-card.component.html
@@ -58,7 +58,7 @@
       aria-labelledby="accordion-open-heading-1"
     >
       <div
-        class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-800"
+        class="p-5 bg-gray-800 border border-gray-700"
       >
         <p class="mb-2 text-white">
             {{technology.category.description}}
