--- a/frontend/src/app/modules/home/components/ring-technologies/ring-technologies.component.html
+++ b/frontend/src/app/modules/home/components/ring-technologies/ring-technologies.component.html
@@ -1,6 +1,6 @@
 <div class="md:flex px-2">
     <ul
-        class="flex-column space-y-4 text-sm font-medium text-gray-500 dark:text-gray-400 md:me-4 mb-4 md:mb-0 md:w-2/12">
+        class="flex-column space-y-4 text-sm font-medium text-gray-400 md:me-4 mb-4 md:mb-0 md:w-2/12">
         <li *ngFor="let ring of technologiesByRings; let idx = index">
             <a (click)="selectRing(idx)" class="inline-flex justify-between px-4 py-3 text-white rounded-lg w-full"
                 [ngClass]="{
@@ -16,7 +16,7 @@
             </a>
         </li>
     </ul>
-    <div class="pb-6 bg-gray-500 text-medium dark:text-gray-400 dark:bg-gray-800 rounded-lg w-full h-full">
+    <div class="pb-6 text-gray-400 bg-gray-800 text-medium rounded-lg w-full h-full">
         <h4 class="mb-2 text-3xl font-bold tracking-tight text-gray-900 text-white">
             Technologies:
         </h4>
