--- a/frontend/src/app/modules/home/components/technology-radar/technology-radar.component.html
+++ b/frontend/src/app/modules/home/components/technology-radar/technology-radar.component.html
@@ -1,6 +1,6 @@
 <app-screen>
     <div class="container mx-auto">
-        <div class="w-full shadow bg-gray-800">
+        <div class="w-full bg-gray-800">
             <div class="py-4 px-2">
                 <category-tabs [categories]="categories" (onTabChange)="tabChange($event)"></category-tabs>
             </div>
