--- a/frontend/src/app/modules/home/components/ring-technologies/ring-technologies.component.html
+++ b/frontend/src/app/modules/home/components/ring-technologies/ring-technologies.component.html
@@ -8,7 +8,7 @@
                   'bg-gray-50 text-gray-400 hover:bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600': selectedRing !== idx
             }">
                 <p>
-                    {{ ring.ringName }}
+                    {{ ring.name }}
                 </p>
                 <p>
                     ({{ring.technologies.length}})
