--- a/frontend/src/app/modules/home/components/technology-card/technology-card.component.html
+++ b/frontend/src/app/modules/home/components/technology-card/technology-card.component.html
@@ -61,7 +61,7 @@
         class="p-5 bg-gray-800 border border-gray-700"
       >
         <p class="mb-2 text-white">
-            {{technology.category.description}}
+            {{technology.descriptionCategorization}}
         </p>
       </div>
     </div>
