--- a/frontend/src/app/shared/components/technology-viewer/components/ring-technologies/ring-technologies.component.html
+++ b/frontend/src/app/shared/components/technology-viewer/components/ring-technologies/ring-technologies.component.html
@@ -20,11 +20,8 @@
         <h4 class="mb-2 text-3xl font-bold tracking-tight text-gray-900 text-white">
             Technologies:
         </h4>
-        <div *ngFor="let techonlogy of technologiesBySelectedRing">
-            <technology-card [technology]="techonlogy" />
-        </div>
-        <div *ngIf="technologiesBySelectedRing.length === 0">
-            <app-alert alertType="info" message="Currently there are no Technologies in those categories." />
-        </div>
+        <ng-content>
+
+        </ng-content>
     </div>
 </div>
