--- a/frontend/src/app/core/auth/components/signup/signup.component.html
+++ b/frontend/src/app/core/auth/components/signup/signup.component.html
@@ -4,7 +4,7 @@
             class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
             <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
                 <p class="text-sm font-light text-black-500 dark:text-black-400">
-                    <a href="/login" class="font-medium text-primary-600 hover:underline dark:text-primary-500">Go back
+                    <a href="/auth/login" class="font-medium text-primary-600 hover:underline dark:text-primary-500">Go back
                         to Login</a>
                 </p>
                 <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
