--- a/frontend/src/app/shared/components/screen/screen.component.html
+++ b/frontend/src/app/shared/components/screen/screen.component.html
@@ -1,5 +1,7 @@
+<div class="flex flex-col h-screen">
 <app-header></app-header>
-<div class="h-screen py-6">
+<main class="flex-grow bg-gray-800 pb-4">
     <ng-content></ng-content>
+</main>
+    <app-footer></app-footer>
 </div>
-<app-footer></app-footer>
