--- a/frontend/src/app/shared/components/screen/components/footer/footer.component.html
+++ b/frontend/src/app/shared/components/screen/components/footer/footer.component.html
@@ -1,6 +1,6 @@
-<footer class="bg-gray-700 rounded-lg shadow">
+<footer class="bg-gray-700 shadow">
     <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
-      <span class="text-sm text-gray-400 sm:text-center"><a href="https://flowbite.com/" class="hover:underline">Davide Ceresa |</a> HSLU | WEBLAB | HS23 
+      <span class="text-sm text-gray-400 sm:text-center"><a class="hover:underline">Davide Ceresa |</a> HSLU | WEBLAB | HS23 
     </span>
     <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-400 sm:mt-0">
         <li>
