--- a/frontend/src/app/shared/components/screen/screen.component.html
+++ b/frontend/src/app/shared/components/screen/screen.component.html
@@ -1,7 +1,5 @@
-<div class="flex flex-col h-screen">
 <app-header></app-header>
-<main class="flex-grow bg-gray-800 pb-4">
+<div class="h-screen py-6">
     <ng-content></ng-content>
-</main>
-    <app-footer></app-footer>
 </div>
+<app-footer></app-footer>
