--- a/frontend/src/app/modules/admin/components/technology-form/technology-form.component.html
+++ b/frontend/src/app/modules/admin/components/technology-form/technology-form.component.html
@@ -1,5 +1,4 @@
-<app-screen>
-  <div class="container mx-auto">
+<div class="mx-auto">
     <form [formGroup]="technologyForm" (ngSubmit)="sendForm()" class="bg-gray-700 text-white shadow-md rounded-lg p-8 mb-4">
       <div class="flex flex-wrap -mx-3 mb-6">
         <div class="w-full px-4 py-4">
@@ -114,4 +113,3 @@
       </div>
     </form>
   </div>
-</app-screen>
