style: now the technology description use italic font

--- a/frontend/src/app/shared/components/technology-card/technology-card.component.html
+++ b/frontend/src/app/shared/components/technology-card/technology-card.component.html
@@ -17,7 +17,7 @@
       </ng-template>
     </div>
   </div>
-  <p class="font-normal text-white">
+  <p class="font-normal text-white italic">
     {{ technology.description }}
   </p>
   <div class="mt-3">
