--- a/frontend/src/app/modules/admin/components/ring-handler/ring-handler.component.html
+++ b/frontend/src/app/modules/admin/components/ring-handler/ring-handler.component.html
@@ -2,6 +2,6 @@
     <h4 class="mb-2 text-3xl font-bold tracking-tight text-gray-900 text-white">
         {{title}}
     </h4>
-    <app-ring-form [required]="true" [ringFormData]="ringFormData" (getRingFormValues)="handleSubmit($event)"
-        (stop)="handleGoBack()" class="w-full" />
+    <app-ring-form [required]="true" [ringData]="ringData" (handleSubmit)="handleSubmit($event)"
+        (handleGoBack)="handleGoBack()" class="w-full" />
 </div>
