--- a/frontend/src/app/shared/components/screen/components/header/header.component.html
+++ b/frontend/src/app/shared/components/screen/components/header/header.component.html
@@ -1,11 +1,10 @@
-<nav class="border-gray-200 bg-gray-700 border-gray-700">
-    <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-        <a class="flex items-center space-x-3">
-            <img src="../../../../assets/icon.png" class="h-12 rounded-lg" alt="Tech-Radar Logo" />
+<nav class="bg-gray-700 ">
+    <div class="container flex flex-wrap items-center justify-between p-2">
+        <a [routerLink]="['/home']" class="flex items-center space-x-3">
+            <img src="../../../../assets/icon.png" class="h-10 rounded-lg" alt="Tech-Radar Logo" />
             <span class="self-center text-3xl font-semibold whitespace-nowrap text-white">Tech-Radar</span>
         </a>
-
-        <button data-collapse-toggle="navbar-solid-bg" type="button"
+        <button (click)="toggleMobileMenu()" data-collapse-toggle="navbar-solid-bg" type="button"
             class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-400 hover:bg-gray-700 focus:ring-gray-600 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
             aria-controls="navbar-solid-bg" aria-expanded="false">
             <span class="sr-only">Open main menu</span>
@@ -14,8 +13,33 @@
                     d="M1 1h15M1 7h15M1 13h15" />
             </svg>
         </button>
-        <div class="hidden w-full md:block md:w-auto" id="navbar-solid-bg">
-
+        <div class="w-full md:block md:w-auto" [class.hidden]="!isMobileMenuOpen" id="navbar-solid-bg">
+            <div class="max-w-screen-xl justify-between px-4 py-3">
+                <div class="grid lg:grid-cols-2">
+                    <div *ngIf="userData"
+                        class="flex flex-row items-center text-white border border-gray-500 rounded-lg p-1 px-2 m-1">
+                        <div class="flex flex-col">
+                            <p class="text-xs text-gray-300">User:</p>
+                            <p>{{userData.userName}}</p>
+                        </div>
+                        <div class="flex flex-col ml-3">
+                            <p class="text-xs text-gray-300">Role:</p>
+                            <p> {{userData.role}}</p>
+                        </div>
+                    </div>
+                    <div class="flex justify-center">
+                        <a *ngIf="isAdmin" [routerLink]="['/admin/dashboard']"
+                            class="flex justify-center items-center w-1/2 bg-blue-700 bg-opacity-50 hover:bg-blue-800 border border-blue-600 text-white rounded m-1">
+                            Admin
+                        </a>
+                        <button
+                            class="w-1/2 bg-red-500 bg-opacity-50 hover:bg-red-600 border border-red-500 text-white rounded m-1"
+                            type="button" (click)="logOut()">
+                            logout
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </nav>
