--- a/frontend/src/app/core/auth/components/login/login.component.html
+++ b/frontend/src/app/core/auth/components/login/login.component.html
@@ -1,4 +1,4 @@
-<section class="bg-gray-50 dark:bg-gray-900">
+<section class="bg-gray-900 min-h-screen">
     <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
         <div
             class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
@@ -6,48 +6,57 @@
                 <div class="flex justify-center">
                     <img class="rounded-lg w-20 h-20" src="/assets/logo.png" alt="image">
                 </div>
-                <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
+                <h1 class="text-xl font-bold leading-tight tracking-tight text-white md:text-2xl ">
                     Sign in to your account
                 </h1>
                 <form [formGroup]="loginForm" (ngSubmit)="tryLogin()" class="space-y-4 md:space-y-6" action="#">
-                    <div>
-                        <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your
-                            email:</label>
-                        <input formControlName="email" type="email" name="email" id="email"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                            placeholder="name@company.com">
-                        <div *ngIf="loginForm.get('email')?.errors && loginForm.get('email')?.touched">
-                            <p *ngIf="loginForm.get('email')?.errors?.['required']" class="text-red-500 text-xs italic">
+                    <div class="flex flex-col">
+                        <label for="email" [ngClass]="{
+                                 'block mb-2 text-sm font-medium text-white' : !getErrorState('email'),
+                                 'block text-md text-red-500' : getErrorState('email')
+                        }">
+                            Your email:
+                        </label>
+                        <input [ngClass]="{
+                                        'rounded w-full p-2.5 py-2 px-3 text-black' : !getErrorState('email'),
+                                        'border text-red-500 placeholder-red-500 border-red-500 placeholder-red-700 text-sm rounded-lg focus:ring-red-500 focus:border-red-500 block w-full p-2.5 ' : getErrorState('email')
+                        }" formControlName="email" type="email" name="email" id="email" placeholder="name@company.com">
+                        <div *ngIf="getErrorState('email')">
+                            <p *ngIf="loginForm.get('email')?.errors?.['required']"
+                                class="mt-1 text-red-500 text-sm italic">
                                 The email is required.
                             </p>
-                            <p *ngIf="loginForm.get('email')?.errors?.['email']" class="text-red-500 text-xs italic">
+                            <p *ngIf="loginForm.get('email')?.errors?.['email']"
+                                class="mt-1 text-red-500 text-sm italic">
                                 The email is not valid.
                             </p>
                         </div>
                     </div>
-                    <div>
-                        <label for="password"
-                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Password:</label>
-                        <input formControlName="password" type="password" name="password" id="password"
-                            class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                            placeholder="••••••••">
-                        <div *ngIf="loginForm.get('password')?.errors && loginForm.get('password')?.touched">
+                    <div class="flex flex-col">
+                        <label [ngClass]="{
+                            'block mb-2 text-sm font-medium text-white' : !getErrorState('password'),
+                            'block text-md text-red-500' : getErrorState('password')
+                                }" for="password">
+                            Password:
+                        </label>
+                        <input [ngClass]="{
+                            'rounded w-full p-2.5 py-2 px-3 text-black' : !getErrorState('password'),
+                            'border text-red-500 placeholder-red-500 border-red-500 placeholder-red-700 text-sm rounded-lg focus:ring-red-500 focus:border-red-500 block w-full p-2.5 ' : getErrorState('password')
+            }" formControlName="password" type="password" name="password" id="password" placeholder="••••••••">
+                        <div *ngIf="getErrorState('password')">
                             <p *ngIf="loginForm.get('password')?.errors?.['required']"
-                                class="text-red-500 text-xs italic">
+                                class="mt-1 text-red-500 text-sm italic">
                                 The password is required.
                             </p>
                         </div>
                     </div>
+                    <button type="submit"
+                        class="w-full text-white bg-opacity-50 bg-green-700 hover:bg-green-800 focus:ring-primary-800 focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center">
+                        Sign in
+                    </button>
                     <div *ngIf="error">
                         <app-alert alertType="error" message={{error.error}} />
                     </div>
-                    <button type="submit"
-                        class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Sign
-                        in</button>
-                    <p class="text-sm font-light text-gray-500 dark:text-gray-400">
-                        Don’t have an account yet? <a href="/auth/signup"
-                            class="font-medium text-primary-600 hover:underline dark:text-primary-500">Sign up</a>
-                    </p>
                 </form>
             </div>
         </div>
