--- a/frontend/src/app/shared/components/screen/components/header/header.component.html
+++ b/frontend/src/app/shared/components/screen/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="bg-gray-700 ">
     <div class="container flex flex-wrap items-center justify-between p-2">
-        <a [routerLink]="['/home']" class="flex items-center space-x-3">
+        <a [routerLink]="['/']" class="flex items-center space-x-3">
             <img src="../../../../assets/icon.png" class="h-10 rounded-lg" alt="Tech-Radar Logo" />
             <span class="self-center text-3xl font-semibold whitespace-nowrap text-white">Tech-Radar</span>
         </a>
