--- a/frontend/src/app/core/auth/components/login/login.component.html
+++ b/frontend/src/app/core/auth/components/login/login.component.html
@@ -4,7 +4,7 @@
             class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
             <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
                 <div class="flex justify-center">
-                    <img class="rounded-lg w-20 h-20" src="/assets/logo.png" alt="image">
+                    <img class="rounded-lg w-20 h-20" src="/assets/logo.png" alt="logo">
                 </div>
                 <h1 class="text-xl font-bold leading-tight tracking-tight text-white md:text-2xl ">
                     Sign in to your account
