--- a/frontend/src/app/modules/admin/components/technology-dashboard/technology-dashboard.component.html
+++ b/frontend/src/app/modules/admin/components/technology-dashboard/technology-dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="container mx-auto">
     <div class="w-full bg-gray-800">
-        <technology-viewer [technologyRadar]="technologyRadar" (setSelectedTechnologies)="setTechnologies($event)">
+        <technology-viewer [technologyRadar]="technologyRadar" (technologiesChanged)="setTechnologies($event)">
             <div *ngFor="let techonlogy of selectedTechnologies">
                 <technology-card [technology]="techonlogy" />
             </div>
